target/423/cgram.output
Terminals unused in grammar

   BAD_TOKEN
   SP
   DTAB
   ITAB
   EOL
   TAB
   ECNT


Grammar

    0 $accept: file $end

    1 identifier: IDENTIFIER
    2           | ENUMERATION_CONSTANT

    3 file: translation_unit

    4 translation_unit: external_declaration
    5                 | translation_unit external_declaration

    6 external_declaration: function_definition
    7                     | declaration
    8                     | untyped_declaration

    9 $@1: /* empty */

   10 function_definition: function_declarator $@1 compound_statement

   11 $@2: /* empty */

   12 function_definition: function_declarator declaration_list $@2 compound_statement

   13 $@3: /* empty */

   14 function_definition: declaration_specifiers function_declarator $@3 compound_statement

   15 $@4: /* empty */

   16 function_definition: declaration_specifiers function_declarator declaration_list $@4 compound_statement

   17 declaration: declaration_specifiers SM
   18            | declaration_specifiers init_declarator_list SM

   19 untyped_declaration: init_declarator_list SM

   20 declaration_list: declaration
   21                 | declaration_list declaration

   22 declaration_specifiers: storage_class_specifier
   23                       | storage_class_specifier declaration_specifiers
   24                       | type_specifier
   25                       | type_specifier declaration_specifiers
   26                       | type_qualifier
   27                       | type_qualifier declaration_specifiers

   28 storage_class_specifier: TYPEDEF
   29                        | EXTERN
   30                        | STATIC
   31                        | AUTO
   32                        | REGISTER

   33 type_specifier: actual_type_specifier
   34               | type_adjective

   35 actual_type_specifier: VOID
   36                      | CHAR
   37                      | INT
   38                      | FLOAT
   39                      | DOUBLE
   40                      | TYPEDEF_NAME
   41                      | struct_or_union_specifier
   42                      | enum_specifier

   43 type_adjective: SHORT
   44               | LONG
   45               | SIGNED
   46               | UNSIGNED

   47 type_qualifier: CONST
   48               | VOLATILE

   49 $@5: /* empty */

   50 struct_or_union_specifier: struct_or_union LC $@5 struct_declaration_list RC

   51 $@6: /* empty */

   52 struct_or_union_specifier: struct_or_union identifier LC $@6 struct_declaration_list RC
   53                          | struct_or_union identifier

   54 struct_or_union: STRUCT
   55                | UNION

   56 struct_declaration_list: struct_declaration
   57                        | struct_declaration_list struct_declaration

   58 init_declarator_list: init_declarator
   59                     | init_declarator_list CM init_declarator

   60 init_declarator: declarator
   61                | declarator ASN initializer

   62 struct_declaration: specifier_qualifier_list SM
   63                   | specifier_qualifier_list struct_declarator_list SM

   64 specifier_qualifier_list: type_specifier
   65                         | type_specifier specifier_qualifier_list
   66                         | type_qualifier
   67                         | type_qualifier specifier_qualifier_list

   68 struct_declarator_list: struct_declarator
   69                       | struct_declarator_list CM struct_declarator

   70 struct_declarator: declarator
   71                  | COLON constant_expression
   72                  | declarator COLON constant_expression

   73 enum_specifier: ENUM LC enumerator_list RC
   74               | ENUM identifier LC enumerator_list RC
   75               | ENUM identifier

   76 enumerator_list: enumerator
   77                | enumerator_list CM enumerator

   78 enumerator: IDENTIFIER

   79 $@7: /* empty */

   80 enumerator: IDENTIFIER $@7 ASN constant_expression

   81 declarator: direct_declarator
   82           | pointer direct_declarator

   83 direct_declarator: identifier
   84                  | LP declarator RP
   85                  | direct_declarator LB RB
   86                  | direct_declarator LB constant_expression RB
   87                  | direct_declarator LP parameter_type_list RP
   88                  | direct_declarator LP RP
   89                  | direct_declarator LP identifier_list RP

   90 function_declarator: direct_function_declarator
   91                    | pointer direct_function_declarator

   92 direct_function_declarator: direct_declarator LP parameter_type_list RP
   93                           | direct_declarator LP RP
   94                           | direct_declarator LP identifier_list RP

   95 pointer: MUL
   96        | MUL type_qualifier_list
   97        | MUL pointer
   98        | MUL type_qualifier_list pointer

   99 type_qualifier_list: type_qualifier
  100                    | type_qualifier_list type_qualifier

  101 parameter_type_list: parameter_list
  102                    | parameter_list CM ELIPSIS

  103 parameter_list: parameter_declaration
  104               | parameter_list CM parameter_declaration

  105 parameter_declaration: declaration_specifiers declarator
  106                      | declaration_specifiers
  107                      | declaration_specifiers abstract_declarator

  108 identifier_list: IDENTIFIER
  109                | identifier_list CM IDENTIFIER

  110 initializer: assignment_expression
  111            | LC initializer_list RC
  112            | LC initializer_list CM RC

  113 initializer_list: initializer
  114                 | initializer_list CM initializer

  115 type_name: specifier_qualifier_list
  116          | specifier_qualifier_list abstract_declarator

  117 abstract_declarator: pointer
  118                    | direct_abstract_declarator
  119                    | pointer direct_abstract_declarator

  120 direct_abstract_declarator: LP abstract_declarator RP
  121                           | LB RB
  122                           | LB constant_expression RB
  123                           | direct_abstract_declarator LB RB
  124                           | direct_abstract_declarator LB constant_expression RB
  125                           | LP RP
  126                           | LP parameter_type_list RP
  127                           | direct_abstract_declarator LP RP
  128                           | direct_abstract_declarator LP parameter_type_list RP

  129 statement: labeled_statement
  130          | compound_statement
  131          | expression_statement
  132          | selection_statement
  133          | iteration_statement
  134          | jump_statement

  135 labeled_statement: identifier COLON statement
  136                  | CASE constant_expression COLON statement
  137                  | DEFAULT COLON statement

  138 expression_statement: SM
  139                     | expression SM

  140 compound_statement: LC RC

  141 $@8: /* empty */

  142 compound_statement: LC $@8 compound_statement_opt RC

  143 compound_statement_opt: statement_list
  144                       | declaration_list
  145                       | declaration_list statement_list

  146 statement_list: statement
  147               | statement_list statement

  148 selection_statement: IF LP expression RP statement
  149                    | IF LP expression RP statement ELSE statement
  150                    | SWITCH LP expression RP statement

  151 iteration_statement: WHILE LP expression RP statement
  152                    | DO statement WHILE LP expression RP SM
  153                    | FOR LP forcntrl RP statement

  154 forcntrl: SM SM
  155         | SM SM expression
  156         | SM expression SM
  157         | SM expression SM expression
  158         | expression SM SM
  159         | expression SM SM expression
  160         | expression SM expression SM
  161         | expression SM expression SM expression

  162 jump_statement: GOTO identifier SM
  163               | CONTINUE SM
  164               | BREAK SM
  165               | RETURN SM
  166               | RETURN expression SM

  167 expression: assignment_expression
  168           | expression CM assignment_expression

  169 assignment_expression: conditional_expression
  170                      | unary_expression assignment_operator assignment_expression

  171 assignment_operator: ASN
  172                    | MUASN
  173                    | DIASN
  174                    | MOASN
  175                    | PLASN
  176                    | MIASN
  177                    | SLASN
  178                    | SRASN
  179                    | ANASN
  180                    | ERASN
  181                    | ORASN

  182 conditional_expression: logical_or_expression
  183                       | logical_or_expression QUEST expression COLON conditional_expression

  184 constant_expression: conditional_expression

  185 logical_or_expression: logical_and_expression
  186                      | logical_or_expression OROR logical_and_expression

  187 logical_and_expression: inclusive_or_expression
  188                       | logical_and_expression ANDAND inclusive_or_expression

  189 inclusive_or_expression: exclusive_or_expression
  190                        | inclusive_or_expression OR exclusive_or_expression

  191 exclusive_or_expression: and_expression
  192                        | exclusive_or_expression ER and_expression

  193 and_expression: equality_expression
  194               | and_expression AND equality_expression

  195 equality_expression: relational_expression
  196                    | equality_expression EQ relational_expression
  197                    | equality_expression NE relational_expression

  198 relational_expression: shift_expression
  199                      | relational_expression LT shift_expression
  200                      | relational_expression GT shift_expression
  201                      | relational_expression LE shift_expression
  202                      | relational_expression GE shift_expression

  203 shift_expression: additive_expression
  204                 | shift_expression SHL additive_expression
  205                 | shift_expression SHR additive_expression

  206 additive_expression: multiplicative_expression
  207                    | additive_expression PLUS multiplicative_expression
  208                    | additive_expression MINUS multiplicative_expression

  209 multiplicative_expression: cast_expression
  210                          | multiplicative_expression MUL cast_expression
  211                          | multiplicative_expression DIV cast_expression
  212                          | multiplicative_expression MOD cast_expression

  213 cast_expression: unary_expression
  214                | LP type_name RP cast_expression

  215 unary_expression: postfix_expression
  216                 | INCOP unary_expression
  217                 | DECOP unary_expression
  218                 | unary_operator cast_expression
  219                 | SIZEOF unary_expression
  220                 | SIZEOF LP type_name RP

  221 unary_operator: AND
  222               | MUL
  223               | PLUS
  224               | MINUS
  225               | NOT
  226               | BANG

  227 postfix_expression: primary_expression
  228                   | postfix_expression LB expression RB
  229                   | postfix_expression LP RP
  230                   | postfix_expression LP argument_expression_list RP
  231                   | postfix_expression DOT identifier
  232                   | postfix_expression FOLLOW identifier
  233                   | postfix_expression INCOP
  234                   | postfix_expression DECOP

  235 primary_expression: IDENTIFIER
  236                   | constant
  237                   | STRING
  238                   | LP expression RP

  239 argument_expression_list: assignment_expression
  240                         | argument_expression_list CM assignment_expression

  241 constant: ICON
  242         | CCON
  243         | FCON
  244         | ENUMERATION_CONSTANT


Terminals, with rules where they appear

$end (0) 0
error (256)
BAD_TOKEN (258)
ICON (259) 241
CCON (260) 242
FCON (261) 243
ENUMERATION_CONSTANT (262) 2 244
IDENTIFIER (263) 1 78 80 108 109 235
STRING (264) 237
SIZEOF (265) 219 220
INCOP (266) 216 233
DECOP (267) 217 234
SHL (268) 204
SHR (269) 205
LE (270) 201
GE (271) 202
EQ (272) 196
NE (273) 197
ANDAND (274) 188
OROR (275) 186
MUASN (276) 172
DIASN (277) 173
MOASN (278) 174
PLASN (279) 175
ASN (280) 61 80 171
MIASN (281) 176
SLASN (282) 177
SRASN (283) 178
ANASN (284) 179
ERASN (285) 180
ORASN (286) 181
TYPEDEF_NAME (287) 40
CM (288) 59 69 77 102 104 109 112 114 168 240
SM (289) 17 18 19 62 63 138 139 152 154 155 156 157 158 159 160 161
    162 163 164 165 166
LT (290) 199
GT (291) 200
PLUS (292) 207 223
MINUS (293) 208 224
MUL (294) 95 96 97 98 210 222
DIV (295) 211
MOD (296) 212
LP (297) 84 87 88 89 92 93 94 120 125 126 127 128 148 149 150 151 152
    153 214 220 229 230 238
RP (298) 84 87 88 89 92 93 94 120 125 126 127 128 148 149 150 151 152
    153 214 220 229 230 238
LB (299) 85 86 121 122 123 124 228
RB (300) 85 86 121 122 123 124 228
LC (301) 50 52 73 74 111 112 140 142
RC (302) 50 52 73 74 111 112 140 142
COLON (303) 71 72 135 136 137 183
QUEST (304) 183
AND (305) 194 221
OR (306) 190
ER (307) 192
NOT (308) 225
FOLLOW (309) 232
BANG (310) 226
DOT (311) 231
SP (312)
DTAB (313)
ITAB (314)
EOL (315)
TAB (316)
ECNT (317)
TYPEDEF (318) 28
EXTERN (319) 29
STATIC (320) 30
AUTO (321) 31
REGISTER (322) 32
CHAR (323) 36
SHORT (324) 43
INT (325) 37
LONG (326) 44
SIGNED (327) 45
UNSIGNED (328) 46
FLOAT (329) 38
DOUBLE (330) 39
CONST (331) 47
VOLATILE (332) 48
VOID (333) 35
STRUCT (334) 54
UNION (335) 55
ENUM (336) 73 74 75
ELIPSIS (337) 102
CASE (338) 136
DEFAULT (339) 137
IF (340) 148 149
SWITCH (341) 150
WHILE (342) 151 152
DO (343) 152
FOR (344) 153
GOTO (345) 162
CONTINUE (346) 163
BREAK (347) 164
RETURN (348) 165 166
THEN (349)
ELSE (350) 149


Nonterminals, with rules where they appear

$accept (96)
    on left: 0
identifier (97)
    on left: 1 2, on right: 52 53 74 75 83 135 162 231 232
file (98)
    on left: 3, on right: 0
translation_unit (99)
    on left: 4 5, on right: 3 5
external_declaration (100)
    on left: 6 7 8, on right: 4 5
function_definition (101)
    on left: 10 12 14 16, on right: 6
$@1 (102)
    on left: 9, on right: 10
$@2 (103)
    on left: 11, on right: 12
$@3 (104)
    on left: 13, on right: 14
$@4 (105)
    on left: 15, on right: 16
declaration (106)
    on left: 17 18, on right: 7 20 21
untyped_declaration (107)
    on left: 19, on right: 8
declaration_list (108)
    on left: 20 21, on right: 12 16 21 144 145
declaration_specifiers (109)
    on left: 22 23 24 25 26 27, on right: 14 16 17 18 23 25 27 105
    106 107
storage_class_specifier (110)
    on left: 28 29 30 31 32, on right: 22 23
type_specifier (111)
    on left: 33 34, on right: 24 25 64 65
actual_type_specifier (112)
    on left: 35 36 37 38 39 40 41 42, on right: 33
type_adjective (113)
    on left: 43 44 45 46, on right: 34
type_qualifier (114)
    on left: 47 48, on right: 26 27 66 67 99 100
struct_or_union_specifier (115)
    on left: 50 52 53, on right: 41
$@5 (116)
    on left: 49, on right: 50
$@6 (117)
    on left: 51, on right: 52
struct_or_union (118)
    on left: 54 55, on right: 50 52 53
struct_declaration_list (119)
    on left: 56 57, on right: 50 52 57
init_declarator_list (120)
    on left: 58 59, on right: 18 19 59
init_declarator (121)
    on left: 60 61, on right: 58 59
struct_declaration (122)
    on left: 62 63, on right: 56 57
specifier_qualifier_list (123)
    on left: 64 65 66 67, on right: 62 63 65 67 115 116
struct_declarator_list (124)
    on left: 68 69, on right: 63 69
struct_declarator (125)
    on left: 70 71 72, on right: 68 69
enum_specifier (126)
    on left: 73 74 75, on right: 42
enumerator_list (127)
    on left: 76 77, on right: 73 74 77
enumerator (128)
    on left: 78 80, on right: 76 77
$@7 (129)
    on left: 79, on right: 80
declarator (130)
    on left: 81 82, on right: 60 61 70 72 84 105
direct_declarator (131)
    on left: 83 84 85 86 87 88 89, on right: 81 82 85 86 87 88 89 92
    93 94
function_declarator (132)
    on left: 90 91, on right: 10 12 14 16
direct_function_declarator (133)
    on left: 92 93 94, on right: 90 91
pointer (134)
    on left: 95 96 97 98, on right: 82 91 97 98 117 119
type_qualifier_list (135)
    on left: 99 100, on right: 96 98 100
parameter_type_list (136)
    on left: 101 102, on right: 87 92 126 128
parameter_list (137)
    on left: 103 104, on right: 101 102 104
parameter_declaration (138)
    on left: 105 106 107, on right: 103 104
identifier_list (139)
    on left: 108 109, on right: 89 94 109
initializer (140)
    on left: 110 111 112, on right: 61 113 114
initializer_list (141)
    on left: 113 114, on right: 111 112 114
type_name (142)
    on left: 115 116, on right: 214 220
abstract_declarator (143)
    on left: 117 118 119, on right: 107 116 120
direct_abstract_declarator (144)
    on left: 120 121 122 123 124 125 126 127 128, on right: 118 119
    123 124 127 128
statement (145)
    on left: 129 130 131 132 133 134, on right: 135 136 137 146 147
    148 149 150 151 152 153
labeled_statement (146)
    on left: 135 136 137, on right: 129
expression_statement (147)
    on left: 138 139, on right: 131
compound_statement (148)
    on left: 140 142, on right: 10 12 14 16 130
$@8 (149)
    on left: 141, on right: 142
compound_statement_opt (150)
    on left: 143 144 145, on right: 142
statement_list (151)
    on left: 146 147, on right: 143 145 147
selection_statement (152)
    on left: 148 149 150, on right: 132
iteration_statement (153)
    on left: 151 152 153, on right: 133
forcntrl (154)
    on left: 154 155 156 157 158 159 160 161, on right: 153
jump_statement (155)
    on left: 162 163 164 165 166, on right: 134
expression (156)
    on left: 167 168, on right: 139 148 149 150 151 152 155 156 157
    158 159 160 161 166 168 183 228 238
assignment_expression (157)
    on left: 169 170, on right: 110 167 168 170 239 240
assignment_operator (158)
    on left: 171 172 173 174 175 176 177 178 179 180 181, on right:
    170
conditional_expression (159)
    on left: 182 183, on right: 169 183 184
constant_expression (160)
    on left: 184, on right: 71 72 80 86 122 124 136
logical_or_expression (161)
    on left: 185 186, on right: 182 183 186
logical_and_expression (162)
    on left: 187 188, on right: 185 186 188
inclusive_or_expression (163)
    on left: 189 190, on right: 187 188 190
exclusive_or_expression (164)
    on left: 191 192, on right: 189 190 192
and_expression (165)
    on left: 193 194, on right: 191 192 194
equality_expression (166)
    on left: 195 196 197, on right: 193 194 196 197
relational_expression (167)
    on left: 198 199 200 201 202, on right: 195 196 197 199 200 201
    202
shift_expression (168)
    on left: 203 204 205, on right: 198 199 200 201 202 204 205
additive_expression (169)
    on left: 206 207 208, on right: 203 204 205 207 208
multiplicative_expression (170)
    on left: 209 210 211 212, on right: 206 207 208 210 211 212
cast_expression (171)
    on left: 213 214, on right: 209 210 211 212 214 218
unary_expression (172)
    on left: 215 216 217 218 219 220, on right: 170 213 216 217 219
unary_operator (173)
    on left: 221 222 223 224 225 226, on right: 218
postfix_expression (174)
    on left: 227 228 229 230 231 232 233 234, on right: 215 228 229
    230 231 232 233 234
primary_expression (175)
    on left: 235 236 237 238, on right: 227
argument_expression_list (176)
    on left: 239 240, on right: 230 240
constant (177)
    on left: 241 242 243 244, on right: 236


state 0

    0 $accept: . file $end

    ENUMERATION_CONSTANT  shift, and go to state 1
    IDENTIFIER            shift, and go to state 2
    TYPEDEF_NAME          shift, and go to state 3
    MUL                   shift, and go to state 4
    LP                    shift, and go to state 5
    TYPEDEF               shift, and go to state 6
    EXTERN                shift, and go to state 7
    STATIC                shift, and go to state 8
    AUTO                  shift, and go to state 9
    REGISTER              shift, and go to state 10
    CHAR                  shift, and go to state 11
    SHORT                 shift, and go to state 12
    INT                   shift, and go to state 13
    LONG                  shift, and go to state 14
    SIGNED                shift, and go to state 15
    UNSIGNED              shift, and go to state 16
    FLOAT                 shift, and go to state 17
    DOUBLE                shift, and go to state 18
    CONST                 shift, and go to state 19
    VOLATILE              shift, and go to state 20
    VOID                  shift, and go to state 21
    STRUCT                shift, and go to state 22
    UNION                 shift, and go to state 23
    ENUM                  shift, and go to state 24

    identifier                  go to state 25
    file                        go to state 26
    translation_unit            go to state 27
    external_declaration        go to state 28
    function_definition         go to state 29
    declaration                 go to state 30
    untyped_declaration         go to state 31
    declaration_specifiers      go to state 32
    storage_class_specifier     go to state 33
    type_specifier              go to state 34
    actual_type_specifier       go to state 35
    type_adjective              go to state 36
    type_qualifier              go to state 37
    struct_or_union_specifier   go to state 38
    struct_or_union             go to state 39
    init_declarator_list        go to state 40
    init_declarator             go to state 41
    enum_specifier              go to state 42
    declarator                  go to state 43
    direct_declarator           go to state 44
    function_declarator         go to state 45
    direct_function_declarator  go to state 46
    pointer                     go to state 47


state 1

    2 identifier: ENUMERATION_CONSTANT .

    $default  reduce using rule 2 (identifier)


state 2

    1 identifier: IDENTIFIER .

    $default  reduce using rule 1 (identifier)


state 3

   40 actual_type_specifier: TYPEDEF_NAME .

    $default  reduce using rule 40 (actual_type_specifier)


state 4

   95 pointer: MUL .
   96        | MUL . type_qualifier_list
   97        | MUL . pointer
   98        | MUL . type_qualifier_list pointer

    MUL       shift, and go to state 4
    CONST     shift, and go to state 19
    VOLATILE  shift, and go to state 20

    $default  reduce using rule 95 (pointer)

    type_qualifier       go to state 48
    pointer              go to state 49
    type_qualifier_list  go to state 50


state 5

   84 direct_declarator: LP . declarator RP

    ENUMERATION_CONSTANT  shift, and go to state 1
    IDENTIFIER            shift, and go to state 2
    MUL                   shift, and go to state 4
    LP                    shift, and go to state 5

    identifier         go to state 25
    declarator         go to state 51
    direct_declarator  go to state 52
    pointer            go to state 53


state 6

   28 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 28 (storage_class_specifier)


state 7

   29 storage_class_specifier: EXTERN .

    $default  reduce using rule 29 (storage_class_specifier)


state 8

   30 storage_class_specifier: STATIC .

    $default  reduce using rule 30 (storage_class_specifier)


state 9

   31 storage_class_specifier: AUTO .

    $default  reduce using rule 31 (storage_class_specifier)


state 10

   32 storage_class_specifier: REGISTER .

    $default  reduce using rule 32 (storage_class_specifier)


state 11

   36 actual_type_specifier: CHAR .

    $default  reduce using rule 36 (actual_type_specifier)


state 12

   43 type_adjective: SHORT .

    $default  reduce using rule 43 (type_adjective)


state 13

   37 actual_type_specifier: INT .

    $default  reduce using rule 37 (actual_type_specifier)


state 14

   44 type_adjective: LONG .

    $default  reduce using rule 44 (type_adjective)


state 15

   45 type_adjective: SIGNED .

    $default  reduce using rule 45 (type_adjective)


state 16

   46 type_adjective: UNSIGNED .

    $default  reduce using rule 46 (type_adjective)


state 17

   38 actual_type_specifier: FLOAT .

    $default  reduce using rule 38 (actual_type_specifier)


state 18

   39 actual_type_specifier: DOUBLE .

    $default  reduce using rule 39 (actual_type_specifier)


state 19

   47 type_qualifier: CONST .

    $default  reduce using rule 47 (type_qualifier)


state 20

   48 type_qualifier: VOLATILE .

    $default  reduce using rule 48 (type_qualifier)


state 21

   35 actual_type_specifier: VOID .

    $default  reduce using rule 35 (actual_type_specifier)


state 22

   54 struct_or_union: STRUCT .

    $default  reduce using rule 54 (struct_or_union)


state 23

   55 struct_or_union: UNION .

    $default  reduce using rule 55 (struct_or_union)


state 24

   73 enum_specifier: ENUM . LC enumerator_list RC
   74               | ENUM . identifier LC enumerator_list RC
   75               | ENUM . identifier

    ENUMERATION_CONSTANT  shift, and go to state 1
    IDENTIFIER            shift, and go to state 2
    LC                    shift, and go to state 54

    identifier  go to state 55


state 25

   83 direct_declarator: identifier .

    $default  reduce using rule 83 (direct_declarator)


state 26

    0 $accept: file . $end

    $end  shift, and go to state 56


state 27

    3 file: translation_unit .
    5 translation_unit: translation_unit . external_declaration

    ENUMERATION_CONSTANT  shift, and go to state 1
    IDENTIFIER            shift, and go to state 2
    TYPEDEF_NAME          shift, and go to state 3
    MUL                   shift, and go to state 4
    LP                    shift, and go to state 5
    TYPEDEF               shift, and go to state 6
    EXTERN                shift, and go to state 7
    STATIC                shift, and go to state 8
    AUTO                  shift, and go to state 9
    REGISTER              shift, and go to state 10
    CHAR                  shift, and go to state 11
    SHORT                 shift, and go to state 12
    INT                   shift, and go to state 13
    LONG                  shift, and go to state 14
    SIGNED                shift, and go to state 15
    UNSIGNED              shift, and go to state 16
    FLOAT                 shift, and go to state 17
    DOUBLE                shift, and go to state 18
    CONST                 shift, and go to state 19
    VOLATILE              shift, and go to state 20
    VOID                  shift, and go to state 21
    STRUCT                shift, and go to state 22
    UNION                 shift, and go to state 23
    ENUM                  shift, and go to state 24

    $default  reduce using rule 3 (file)

    identifier                  go to state 25
    external_declaration        go to state 57
    function_definition         go to state 29
    declaration                 go to state 30
    untyped_declaration         go to state 31
    declaration_specifiers      go to state 32
    storage_class_specifier     go to state 33
    type_specifier              go to state 34
    actual_type_specifier       go to state 35
    type_adjective              go to state 36
    type_qualifier              go to state 37
    struct_or_union_specifier   go to state 38
    struct_or_union             go to state 39
    init_declarator_list        go to state 40
    init_declarator             go to state 41
    enum_specifier              go to state 42
    declarator                  go to state 43
    direct_declarator           go to state 44
    function_declarator         go to state 45
    direct_function_declarator  go to state 46
    pointer                     go to state 47


state 28

    4 translation_unit: external_declaration .

    $default  reduce using rule 4 (translation_unit)


state 29

    6 external_declaration: function_definition .

    $default  reduce using rule 6 (external_declaration)


state 30

    7 external_declaration: declaration .

    $default  reduce using rule 7 (external_declaration)


state 31

    8 external_declaration: untyped_declaration .

    $default  reduce using rule 8 (external_declaration)


state 32

   14 function_definition: declaration_specifiers . function_declarator $@3 compound_statement
   16                    | declaration_specifiers . function_declarator declaration_list $@4 compound_statement
   17 declaration: declaration_specifiers . SM
   18            | declaration_specifiers . init_declarator_list SM

    ENUMERATION_CONSTANT  shift, and go to state 1
    IDENTIFIER            shift, and go to state 2
    SM                    shift, and go to state 58
    MUL                   shift, and go to state 4
    LP                    shift, and go to state 5

    identifier                  go to state 25
    init_declarator_list        go to state 59
    init_declarator             go to state 41
    declarator                  go to state 43
    direct_declarator           go to state 44
    function_declarator         go to state 60
    direct_function_declarator  go to state 46
    pointer                     go to state 47


state 33

   22 declaration_specifiers: storage_class_specifier .
   23                       | storage_class_specifier . declaration_specifiers

    TYPEDEF_NAME  shift, and go to state 3
    TYPEDEF       shift, and go to state 6
    EXTERN        shift, and go to state 7
    STATIC        shift, and go to state 8
    AUTO          shift, and go to state 9
    REGISTER      shift, and go to state 10
    CHAR          shift, and go to state 11
    SHORT         shift, and go to state 12
    INT           shift, and go to state 13
    LONG          shift, and go to state 14
    SIGNED        shift, and go to state 15
    UNSIGNED      shift, and go to state 16
    FLOAT         shift, and go to state 17
    DOUBLE        shift, and go to state 18
    CONST         shift, and go to state 19
    VOLATILE      shift, and go to state 20
    VOID          shift, and go to state 21
    STRUCT        shift, and go to state 22
    UNION         shift, and go to state 23
    ENUM          shift, and go to state 24

    $default  reduce using rule 22 (declaration_specifiers)

    declaration_specifiers     go to state 61
    storage_class_specifier    go to state 33
    type_specifier             go to state 34
    actual_type_specifier      go to state 35
    type_adjective             go to state 36
    type_qualifier             go to state 37
    struct_or_union_specifier  go to state 38
    struct_or_union            go to state 39
    enum_specifier             go to state 42


state 34

   24 declaration_specifiers: type_specifier .
   25                       | type_specifier . declaration_specifiers

    TYPEDEF_NAME  shift, and go to state 3
    TYPEDEF       shift, and go to state 6
    EXTERN        shift, and go to state 7
    STATIC        shift, and go to state 8
    AUTO          shift, and go to state 9
    REGISTER      shift, and go to state 10
    CHAR          shift, and go to state 11
    SHORT         shift, and go to state 12
    INT           shift, and go to state 13
    LONG          shift, and go to state 14
    SIGNED        shift, and go to state 15
    UNSIGNED      shift, and go to state 16
    FLOAT         shift, and go to state 17
    DOUBLE        shift, and go to state 18
    CONST         shift, and go to state 19
    VOLATILE      shift, and go to state 20
    VOID          shift, and go to state 21
    STRUCT        shift, and go to state 22
    UNION         shift, and go to state 23
    ENUM          shift, and go to state 24

    $default  reduce using rule 24 (declaration_specifiers)

    declaration_specifiers     go to state 62
    storage_class_specifier    go to state 33
    type_specifier             go to state 34
    actual_type_specifier      go to state 35
    type_adjective             go to state 36
    type_qualifier             go to state 37
    struct_or_union_specifier  go to state 38
    struct_or_union            go to state 39
    enum_specifier             go to state 42


state 35

   33 type_specifier: actual_type_specifier .

    $default  reduce using rule 33 (type_specifier)


state 36

   34 type_specifier: type_adjective .

    $default  reduce using rule 34 (type_specifier)


state 37

   26 declaration_specifiers: type_qualifier .
   27                       | type_qualifier . declaration_specifiers

    TYPEDEF_NAME  shift, and go to state 3
    TYPEDEF       shift, and go to state 6
    EXTERN        shift, and go to state 7
    STATIC        shift, and go to state 8
    AUTO          shift, and go to state 9
    REGISTER      shift, and go to state 10
    CHAR          shift, and go to state 11
    SHORT         shift, and go to state 12
    INT           shift, and go to state 13
    LONG          shift, and go to state 14
    SIGNED        shift, and go to state 15
    UNSIGNED      shift, and go to state 16
    FLOAT         shift, and go to state 17
    DOUBLE        shift, and go to state 18
    CONST         shift, and go to state 19
    VOLATILE      shift, and go to state 20
    VOID          shift, and go to state 21
    STRUCT        shift, and go to state 22
    UNION         shift, and go to state 23
    ENUM          shift, and go to state 24

    $default  reduce using rule 26 (declaration_specifiers)

    declaration_specifiers     go to state 63
    storage_class_specifier    go to state 33
    type_specifier             go to state 34
    actual_type_specifier      go to state 35
    type_adjective             go to state 36
    type_qualifier             go to state 37
    struct_or_union_specifier  go to state 38
    struct_or_union            go to state 39
    enum_specifier             go to state 42


state 38

   41 actual_type_specifier: struct_or_union_specifier .

    $default  reduce using rule 41 (actual_type_specifier)


state 39

   50 struct_or_union_specifier: struct_or_union . LC $@5 struct_declaration_list RC
   52                          | struct_or_union . identifier LC $@6 struct_declaration_list RC
   53                          | struct_or_union . identifier

    ENUMERATION_CONSTANT  shift, and go to state 1
    IDENTIFIER            shift, and go to state 2
    LC                    shift, and go to state 64

    identifier  go to state 65


state 40

   19 untyped_declaration: init_declarator_list . SM
   59 init_declarator_list: init_declarator_list . CM init_declarator

    CM  shift, and go to state 66
    SM  shift, and go to state 67


state 41

   58 init_declarator_list: init_declarator .

    $default  reduce using rule 58 (init_declarator_list)


state 42

   42 actual_type_specifier: enum_specifier .

    $default  reduce using rule 42 (actual_type_specifier)


state 43

   60 init_declarator: declarator .
   61                | declarator . ASN initializer

    ASN  shift, and go to state 68

    $default  reduce using rule 60 (init_declarator)


state 44

   81 declarator: direct_declarator .
   85 direct_declarator: direct_declarator . LB RB
   86                  | direct_declarator . LB constant_expression RB
   87                  | direct_declarator . LP parameter_type_list RP
   88                  | direct_declarator . LP RP
   89                  | direct_declarator . LP identifier_list RP
   92 direct_function_declarator: direct_declarator . LP parameter_type_list RP
   93                           | direct_declarator . LP RP
   94                           | direct_declarator . LP identifier_list RP

    LP  shift, and go to state 69
    LB  shift, and go to state 70

    $default  reduce using rule 81 (declarator)


state 45

   10 function_definition: function_declarator . $@1 compound_statement
   12                    | function_declarator . declaration_list $@2 compound_statement

    TYPEDEF_NAME  shift, and go to state 3
    TYPEDEF       shift, and go to state 6
    EXTERN        shift, and go to state 7
    STATIC        shift, and go to state 8
    AUTO          shift, and go to state 9
    REGISTER      shift, and go to state 10
    CHAR          shift, and go to state 11
    SHORT         shift, and go to state 12
    INT           shift, and go to state 13
    LONG          shift, and go to state 14
    SIGNED        shift, and go to state 15
    UNSIGNED      shift, and go to state 16
    FLOAT         shift, and go to state 17
    DOUBLE        shift, and go to state 18
    CONST         shift, and go to state 19
    VOLATILE      shift, and go to state 20
    VOID          shift, and go to state 21
    STRUCT        shift, and go to state 22
    UNION         shift, and go to state 23
    ENUM          shift, and go to state 24

    $default  reduce using rule 9 ($@1)

    $@1                        go to state 71
    declaration                go to state 72
    declaration_list           go to state 73
    declaration_specifiers     go to state 74
    storage_class_specifier    go to state 33
    type_specifier             go to state 34
    actual_type_specifier      go to state 35
    type_adjective             go to state 36
    type_qualifier             go to state 37
    struct_or_union_specifier  go to state 38
    struct_or_union            go to state 39
    enum_specifier             go to state 42


state 46

   90 function_declarator: direct_function_declarator .

    $default  reduce using rule 90 (function_declarator)


state 47

   82 declarator: pointer . direct_declarator
   91 function_declarator: pointer . direct_function_declarator

    ENUMERATION_CONSTANT  shift, and go to state 1
    IDENTIFIER            shift, and go to state 2
    LP                    shift, and go to state 5

    identifier                  go to state 25
    direct_declarator           go to state 75
    direct_function_declarator  go to state 76


state 48

   99 type_qualifier_list: type_qualifier .

    $default  reduce using rule 99 (type_qualifier_list)


state 49

   97 pointer: MUL pointer .

    $default  reduce using rule 97 (pointer)


state 50

   96 pointer: MUL type_qualifier_list .
   98        | MUL type_qualifier_list . pointer
  100 type_qualifier_list: type_qualifier_list . type_qualifier

    MUL       shift, and go to state 4
    CONST     shift, and go to state 19
    VOLATILE  shift, and go to state 20

    $default  reduce using rule 96 (pointer)

    type_qualifier  go to state 77
    pointer         go to state 78


state 51

   84 direct_declarator: LP declarator . RP

    RP  shift, and go to state 79


state 52
